src/objects/DataStage__c.object
<CustomObject><fields>
        <fullName>extractId__c</fullName>
        <description>This field identifies a particular job that performs a delta extraction. The Pack for Salesforce.com uses this field to track the last time this ID performed a delta extraction. The time of the last delta extraction determines which data the query returns to a particular ID.</description>
        <externalId>true</externalId>
        <label>extractId</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>lastextracttime__c</fullName>
        <description>This field stores the date and time when a user, identified by a unique extractId, last ran a particular delta extraction job.</description>
        <label>lastextracttime</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>object__c</fullName>
        <description>This field stores the name of the Salesforce object for the delta extraction.</description>
        <label>object</label>
        <length>40</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>To use the Pack for Salesforce.com to extract updated or deleted data, you need to add a custom object to your Salesforce.com organization that includes the fields required by the Pack. To support delta extraction (getUpdated or getDeleted operations), create a custom object called DataStage in your Salesforce.com organization.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Read</externalSharingModel><label>DataStage</label><nameField>
        <displayFormat>{YYYY}-{MMDD}-{0}</displayFormat>
        <label>Datastage Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>DataStages</pluralLabel><sharingModel>Read</sharingModel></CustomObject>